Fix close-tab icon misplacement on Firefox
Negative margin-right caused it to overflow to the next line.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,7 +12,6 @@ body {
 
 .close_tab, .close_tab:hover {
     margin-left: 6px;
-    margin-right: -5px;
     padding: 4px;
     text-decoration: none;
 }
